info to compile socket_extern

--- a/p4/bmv2/targets/simple_switch/Makefile.am
+++ b/p4/bmv2/targets/simple_switch/Makefile.am
@@ -10,7 +10,8 @@ noinst_LTLIBRARIES = libsimpleswitch.la
 
 libsimpleswitch_la_SOURCES = \
 simple_switch.cpp simple_switch.h primitives.cpp \
-custom_extern.cpp
+custom_extern.cpp \
+socket_extern.cpp 
 
 libsimpleswitch_la_LIBADD = \
 $(top_builddir)/src/bm_sim/libbmsim.la \
