extern renamed into MLController

--- a/bmv2/targets/simple_switch/Makefile.am
+++ b/bmv2/targets/simple_switch/Makefile.am
@@ -12,7 +12,7 @@ libsimpleswitch_la_SOURCES = \
 simple_switch.cpp simple_switch.h primitives.cpp \
 custom_extern.cpp \
 socket_extern.cpp \
-test_addresses_extern.cpp
+MLController.cpp
 
 libsimpleswitch_la_LIBADD = \
 $(top_builddir)/src/bm_sim/libbmsim.la \
