--- a/rl/requirements.txt
+++ b/rl/requirements.txt
@@ -5,3 +5,8 @@ pandas               0.24.2
 pytest               6.2.5
 pytest-forked        1.3.0
 gast                 0.2.2
+dill	             0.3.4
+progressbar2	     3.55.0
+tensorflow	     1.14.0
+gym		     0.13.0
+
